# heatmap

./: README.md  fibonacci_sphere_grid.py  heatmap_calc.py  heatmap_combine.py  heatmap_gdpt.py  heatmap_plot.py  heatmap_station.py  heatmap_tryagain.py  mesh_create.py  pyproject.toml  test_earthquakes.txt  test_stations.txt  test_stations_2025.txt
prep_scripts/: creatEVT.py  creatSTA.py  createStafile_fromsac.py  grabsac.py  master_runlist.py  xmltoEqlist.py
src/heatmap/: __init__.py  array.py  gridpoint.py  heatmap_plot.py  heatmapcalc.py  heatmapsummary.py  mesh_create.py  mesh_plot.py  mesh_setup.py  read_datafiles.py  taup.py  vespa_prepare.py
tests/: arrayQualityCheck.py  creatEVT.py  creatSTA.py  createStafile_fromsac.py  create_evt.bsh  create_stafile.bsh  gridToDegree.py  load_resource.py  test_eq.py  test_resource_load.py  test_spacing.py  test_stations_lat.txt
tests/resources/: arrStaCheck.txt  evtStaCheck.txt  evt_info.txt  grid_pts.txt  heatmap.json  sta_info.txt  sta_info_old.txt  station_list_total  taTest_event.txt  taTest_sta.txt  test_earthquakes_lat.txt  test_stations.txt  tryingsomething.txt
